# CipherBallot

./: .gitignore  Anchor.toml  Arcium.toml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
app/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
app/public/idl/: confidential_vote.json
app/src/: App.tsx  main.tsx  polyfills.ts  styles.css
app/src/components/: AdminProposalCard.tsx  ProposalCard.tsx  ResultCard.tsx
app/src/idl/: confidential_vote.json  confidential_vote.ts  index.ts
app/src/layout/: Layout.tsx
app/src/lib/: arcium.ts  proposals.ts
app/src/pages/: Creators.tsx  Docs.tsx  Home.tsx  NotFound.tsx  ProposalDetails.tsx  Results.tsx  Voters.tsx
artifacts/: circuits_hash.txt
constant_time_eq/: Cargo.toml
constant_time_eq/src/: lib.rs
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
patches/const-oid/: Cargo.toml
programs/confidential_vote/: Cargo.toml  check_discriminator.rs  final_id.json  fourth_id.json  prod_id.json
programs/confidential_vote/src/: lib.rs
tests/: confidential_vote.ts  init_arcium.mjs  init_arcium.ts  test_voting_flow.mjs
